Fix queue not showing

--- a/public/new.css
+++ b/public/new.css
@@ -876,7 +876,7 @@ input:focus:-ms-input-placeholder {
     display: none;
   }
 
-  .trend-no1 {
+  .nevidisme {
     display: none;
   }
 
